# VoiceToText_TGBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  allowed_user.example.json  bot.py  config.py  core.py  docker-compose.yml  messages.py  middleware.py  pyproject.toml  services.py
.github/workflows/: ci.yml
tests/: conftest.py  test_integration.py  test_middleware.py  test_services.py
